feat(gui): use darker purple for idea nodes
Make idea node circles more visible by using deeper purple shades:
- pending: #b088e0 → #8b5fc9
- in_progress: #9b6ed8 → #7a4db8
- blocked: #7a4db3 → #5c3a8a

Closes bn-2a5d

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -35,10 +35,10 @@
             --bug-in-progress: #d95050;
             --bug-blocked: #b33a3a;
             --bug-done: #8fbc8f;
-            /* Node type colors - ideas (atomic purple) */
-            --idea-pending: #b088e0;
-            --idea-in-progress: #9b6ed8;
-            --idea-blocked: #7a4db3;
+            /* Node type colors - ideas (deeper purple) */
+            --idea-pending: #8b5fc9;
+            --idea-in-progress: #7a4db8;
+            --idea-blocked: #5c3a8a;
             --idea-done: #8fbc8f;
             /* Overlay backgrounds */
             --overlay-bg: rgba(0, 0, 0, 0.85);
@@ -3009,11 +3009,11 @@
                 'done': '#8fbc8f'          // --bug-done
             };
             
-            // Idea colors (atomic purple) - use CSS variables
+            // Idea colors (deeper purple) - use CSS variables
             const ideaColors = {
-                'pending': '#b088e0',      // --idea-pending
-                'in_progress': '#9b6ed8',  // --idea-in-progress
-                'blocked': '#7a4db3',      // --idea-blocked
+                'pending': '#8b5fc9',      // --idea-pending
+                'in_progress': '#7a4db8',  // --idea-in-progress
+                'blocked': '#5c3a8a',      // --idea-blocked
                 'done': '#8fbc8f'          // --idea-done
             };
             
