Fix: GUI Follow Active now latches onto node on page reload
When auto-follow is enabled and the page loads/reloads, the GUI
now automatically snaps to the active (in_progress) task without
requiring the user to toggle the Follow Active switch first.

The fix adds a call to snapToActiveTask() after the initial data
load completes, if autoFollow is true. This ensures consistent
behavior where the auto-follow state is immediately active on
page load, not just visually indicated.

Closes: bn-b2ed

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -1795,7 +1795,7 @@
             const protocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
             state.ws = new WebSocket(`${protocol}//${location.host}/ws`);
 
-            state.ws.onopen = () => {
+            state.ws.onopen = async () => {
                 updateConnectionStatus(true);
                 // Show reconnection toast only if we were previously connected
                 if (wasConnected) {
@@ -1806,8 +1806,13 @@
                     }
                     showToast('Connection restored', 'success', 3000);
                 }
+                const isInitialLoad = !wasConnected;
                 wasConnected = true;
-                loadData();
+                await loadData();
+                // On initial page load, snap to active task if auto-follow is enabled
+                if (isInitialLoad && state.graph.autoFollow) {
+                    snapToActiveTask();
+                }
             };
 
             state.ws.onmessage = (event) => {
