GUI: Add queued edge type to graph filter controls
- Add 'queued' to EDGE_TYPES config with category 'queued' (teal, dashed)
- Add 'queued' case to getEdgeCategoryColor() for filter dot styling
- Edge is visible by default since queue membership is useful info

The edge styling (teal dashed line) was already implemented in
getEdgeStyle(), this just adds the missing filter UI entry.

Closes: bn-ac53

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -1687,7 +1687,8 @@
             supersedes: { name: 'Supersedes', category: 'informational', defaultVisible: false },
             parent_of: { name: 'Parent', category: 'hierarchy', defaultVisible: false },
             child_of: { name: 'Child', category: 'hierarchy', defaultVisible: false },
-            tests: { name: 'Tests', category: 'fixes', defaultVisible: false }
+            tests: { name: 'Tests', category: 'fixes', defaultVisible: false },
+            queued: { name: 'Queued', category: 'queued', defaultVisible: true }
         };
 
         // Load edge filter state from localStorage
@@ -4046,6 +4047,7 @@
                 case 'informational': return styles.getPropertyValue('--edge-informational').trim();
                 case 'fixes': return styles.getPropertyValue('--edge-fixes').trim();
                 case 'hierarchy': return styles.getPropertyValue('--edge-hierarchy').trim();
+                case 'queued': return styles.getPropertyValue('--edge-queued').trim();
                 default: return styles.getPropertyValue('--edge-default').trim();
             }
         }
