Fix: Ready screen queue toggle flicker (bn-923a)
The queue toggle on the Ready Tasks screen would flicker back to its
previous state after toggling because isNodeQueued() was checking
state.graph.edges, which is only populated when the graph view renders.

Changed isNodeQueued() to check state.edges (the API data source of
truth) instead, with the correct property names (source vs from).

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -3513,8 +3513,10 @@
 
         // Check if a node is in the queue (has a 'queued' edge to a queue node)
         function isNodeQueued(nodeId) {
-            return state.graph.edges.some(edge => 
-                edge.from === nodeId && edge.edge_type === 'queued'
+            // Check state.edges (API data) directly, not state.graph.edges
+            // state.graph.edges is only populated when the graph view is rendered
+            return (state.edges || []).some(edge => 
+                edge.source === nodeId && edge.edge_type === 'queued'
             );
         }
 
